# agm_voting

./: .env.example  .gitignore  CLAUDE.md  podman-compose.yml  requirements.txt  vercel.json
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 091424401a0b_add_for_against_abstained_tallies_to_.py  091b1c8142bb_add_tenant_config_table.py  0a4eb6ea160a_ensure_ballot_submission_unique_.py  0e7439a74cb6_add_is_visible_to_motions.py  4aa6276fe2fd_add_given_name_and_surname_to_lot_.py  4ab492b5e61f_add_submitted_by_admin_to_ballot_.py  7d0b4b08919a_add_motion_type_to_motions.py  888085a72643_backfill_motion_number_from_display_.py  999371be8368_add_voting_closed_at_to_motions.py  (+22 more)
backend/app/: config.py  crypto.py  database.py  dependencies.py  logging_config.py  main.py  rate_limiter.py  utils.py
backend/tests/: conftest.py  test_admin_api.py  test_admin_auth_api.py  test_admin_buildings_api.py  test_admin_debug_api.py  test_admin_lot_owners_api.py  test_admin_meetings_api.py  test_admin_service_import.py  test_admin_users.py  test_admin_vote_entry_api.py  test_agm_summary_api.py  test_app.py  test_auth_helpers.py  test_auth_proxy.py  test_blob_service.py  test_config_api.py  test_email.py  test_lot_owner_api.py  test_models.py  test_multi_choice_motion.py  test_neon_auth_service.py  test_otp_auth.py  test_otp_channel_toggles.py  test_phase2_api.py  test_proxy_imports_api.py  test_rate_limiter.py  test_rr4_schema_fixes.py  test_rr5_fixes.py  test_security.py  test_sms.py  test_smtp_config.py  test_subscription_api.py
(+490 files in other folders)
