[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agm-backend"
version = "0.1.0"
description = "AGM Voting App backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "resend>=0.8",
    "structlog>=25.5.0",
    "python-json-logger>=4.0.0",
    "opentelemetry-api>=1.40.0",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "itsdangerous>=2.2.0",
    "greenlet>=3.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "aiosqlite>=0.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=100"

[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py"]
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest-mock>=3.15.1",
]
